RESOLVED FIXED271685
[MSE] media element will error appending the same media segment twice
https://bugs.webkit.org/show_bug.cgi?id=271685
Summary [MSE] media element will error appending the same media segment twice
Jean-Yves Avenard [:jya]
Reported 2024-03-25 18:45:04 PDT
Consider the following code: ``` run('sourceBuffer.appendBuffer(loader.mediaSegment(0))'); await waitFor(sourceBuffer, 'update'); run('sourceBuffer.appendBuffer(loader.mediaSegment(1))'); await waitFor(sourceBuffer, 'update'); run('sourceBuffer.appendBuffer(loader.mediaSegment(1))'); await waitFor(sourceBuffer, 'update'); ``` Appending mediaSegment(1) twice will cause the media element to throw an error. The cause is the SourceBufferParserAVFObjC's `AVStreamDataParser` to return `AVErrorFailedToParse`
Attachments
Radar WebKit Bug Importer
Comment 1 2024-03-25 18:45:22 PDT
Jean-Yves Avenard [:jya]
Comment 2 2024-03-26 17:45:27 PDT
Jean-Yves Avenard [:jya]
Comment 3 2024-03-27 03:20:46 PDT
EWS
Comment 4 2024-03-28 21:49:33 PDT
Committed 276821@main (7d2a7b505c37): <https://commits.webkit.org/276821@main> Reviewed commits have been landed. Closing PR #26508 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.